<resources>
    <string name="app_name">ServicesDemo</string>
    <string name="send_notification">Send Notification</string>
    <string name="android_notification">ANDROID NOTIFICATION</string>
    <string name="your_detail_of_notification">your detail of notification...</string>
    <string name="welcome_to_geeksforgeeks">Welcome To GeeksforGeeks</string>
    <string name="notification_massage">Notification Massage</string>
    <string name="start_service">Start_Service</string>
    <string name="stop_service">stop_serivce</string>
    <string name="notification_sample_app">Notification Sample App</string>
    <string name="expand_me_to_see_a_detailed_message">Expand me to see a detailed message!</string>
    <string name="click_me">CLICK ME</string>
    <string name="imageview">Imageview</string>
</resources>